# AIC_Sejong

./: .gitignore  .gitmodules  CLAUDE.md  GEMINI.md  README.md  main.py  pyproject.toml
.claude/commands/: paper-research.md
ABOUT-ME/: about-me.md  working-rules.md
CLAUDE-OUTPUTS/paper/: MV2MAE_summary.md  fnbot-17-1280773_summary.md
CLAUDE-OUTPUTS/summaries/: 20260405_build_eval_1.md  20260405_scene_description_1.md  20260405_scoring_tests_1.md
CLAUDE-OUTPUTS/summaries/0405/: 20260405_aic_interfaces_1.md  20260405_challenge_rules_1.md  20260405_custom_dockerfile_1.md  20260405_getting_started_1.md  20260405_glossary_1.md  20260405_overview_1.md  20260405_participant_utilities_1.md  20260405_phases_1.md  20260405_policy_1.md  20260405_scoring_1.md  20260405_submission_1.md  20260407_aic_bringup_1.md
CLAUDE-OUTPUTS/summaries/0409/: summary_example-policies_v1.md  summary_lerobot-record-and-train_v1.md  summary_lerobot-record-and-train_v2.md
CLAUDE-OUTPUTS/summaries/0412/: summary_entrypoint-to-local_v1.md  summary_eval-setup-no-docker_v1.md  summary_lerobot-train-params_v1.md  summary_trained-model-to-policy_v1.md
CLAUDE-OUTPUTS/summaries/0413/: summary_docker-eval-run-guide_v1.md  summary_teleop-params_v1.md  summary_world-scenario-params_v1.md
CLAUDE-OUTPUTS/summaries/0416/: summary_mujoco-isaac-sim_v1.md
CLAUDE-OUTPUTS/summaries/0422/: blogs_cable-insertion-failure-recovery_v1.md  summary_active-vibration-cdpr-rods_v1.md  (+4 more)
TEMPLATES/: basic-templates.md
aic_data/scenarios/: trial1_20260416_135925.json  trial1_20260416_135948.json  trial2_20260416_135943.json  trial2_20260416_160728.json  trial3_20260416_135943.json
code/: README.md  collect_data.py  collect_data_native.py  convert_to_lerobot.py  debug_hf_upload.py  generate_scenario.py
code/early-prediction/: early_failure_prediction_transformer.ipynb  reproducibility.py
code/eda/: crop_insertion_roi.py  eda_multiview_bias.ipynb  eda_multiview_bias2.ipynb  eda_multiview_bias3.ipynb
code/huggingface/: load_dataset.py  load_model.py  upload_model.py
debug/: triangulation_cases.yaml
readme/: README.en.md  README.ko.md
tools/stage1_mp/: README.md  check_frames.py  collect_dataset.py  port_detector_3d.py  stereo_test.py  train_yolo.py
triangulation/: README.md  evaluate_triangulation_xyz.py  triangulation_cases.yaml
ws_aic/: .gitignore
ws_aic/notebook/: analyze_vision_offset_input_data.ipynb  analyze_yolo_approach_accuracy.ipynb  visualize_distance_prediction_dxdy_on_center.ipynb
ws_aic/notebooks/: align_metrics_analysis.ipynb
ws_aic/src/: pixi.toml
ws_aic/src/aic/: pixi.toml  (+1 more)
ws_aic/src/aic/my_policy_node/: STAGE1_MP2_NOTES.md  package.xml  setup.py
ws_aic/src/aic/my_policy_node/my_policy_node/: Baseline.py  StagedPolicy.py
ws_aic/src/ais/ais_ground_truth_guided_residual_visual_servoing/: README.md  package.xml  pyproject.toml  setup.py
ws_aic/src/ais/ais_ground_truth_guided_residual_visual_servoing/ais_ground_truth_guided_residual_visual_servoing/: SfpGrvsEvalPolicy.py  SfpGrvsTrainingPolicy.py  __init__.py  capture_node.py
ws_aic/src/ais/ais_ground_truth_guided_residual_visual_servoing/ais_ground_truth_guided_residual_visual_servoing/batch/: __init__.py  batch_round.py  collect_batch.py  engine_config.py  runner.py  test_batch.py
ws_aic/src/ais/ais_ground_truth_guided_residual_visual_servoing/ais_ground_truth_guided_residual_visual_servoing/core/: __init__.py  config.py  geometry.py  image_utils.py  task_frames.py
ws_aic/src/ais/ais_ground_truth_guided_residual_visual_servoing/ais_ground_truth_guided_residual_visual_servoing/policies/: __init__.py  eval_policy.py  training_policy.py
ws_aic/src/ais/ais_ground_truth_guided_residual_visual_servoing/ais_ground_truth_guided_residual_visual_servoing/training/: __init__.py  train_distance.py  train_joint.py  train_rotation.py
ws_aic/src/ais/ais_ground_truth_guided_residual_visual_servoing/test/: test_batch_config.py  test_config.py  test_yolo_dataset.py
ws_aic/src/ais/ais_model_evaluation/: package.xml  setup.cfg  setup.py
ws_aic/src/ais/ais_model_evaluation/ais_model_evaluation/: DistanceModelEvalPolicy.py  OrientationModelEvalPolicy.py  __init__.py  config.py  geometry.py  ground_truth.py  policies.py  predictors.py  run_eval.py
ws_aic/src/ais/ais_model_evaluation/resource/: ais_model_evaluation
ws_aic/src/ais/ais_policy/final_policy/: package.xml  pyproject.toml  setup.py
ws_aic/src/ais/ais_policy/final_policy/final_policy/: FinalPolicy.py  __init__.py  align_debug_video.py  config.py  geometry.py  model_store.py  vision.py
ws_aic/src/ais/ais_policy/final_policy/final_policy/pose_prediction/: __init__.py  model.py  predictor.py
ws_aic/src/ais/ais_policy/final_policy/final_policy/vision_offset/: __init__.py  model.py  predictor.py
ws_aic/src/ais/ais_pose_prediction/: package.xml  pyproject.toml  setup.py  train.ipynb
ws_aic/src/ais/ais_pose_prediction/ais_pose_prediction/: __init__.py  config.py  predictor.py  train.py
ws_aic/src/ais/ais_pose_prediction/ais_pose_prediction/model/: __init__.py  dataset.py  pose_model.py
ws_aic/src/ais/ais_retry_classifier/: README.md  package.xml  pyproject.toml  setup.py
ws_aic/src/ais/ais_retry_classifier/ais_retry_classifier/: __init__.py
ws_aic/src/ais/ais_retry_classifier/ais_retry_classifier/collection/: __init__.py  feature_capture_node.py
ws_aic/src/ais/ais_retry_classifier/ais_retry_classifier/core/: __init__.py  features.py  io.py  schema.py  task_frames.py
ws_aic/src/ais/ais_retry_classifier/ais_retry_classifier/policies/: __init__.py  scenario_plan.py
ws_aic/src/ais/ais_retry_classifier/ais_retry_classifier/training/: train_baseline.py
ws_aic/src/ais/ais_retry_classifier/notebooks/: retry_classifier_eda.ipynb
ws_aic/src/ais/ais_retry_classifier/resource/: ais_retry_classifier
ws_aic/src/ais/ais_stiffness_damping_calibration/: README.md  files.txt  package.xml  pixi.toml  setup.cfg  setup.py
ws_aic/src/ais/ais_stiffness_damping_calibration/ais_stiffness_damping_calibration/: __init__.py  calibrate.py  hold_check.py  random_walk.py  visualize.py
(+266 files in other folders)
