<?xml version="1.0"?>
<package format="3">
  <name>my_policy_node</name>
  <version>0.0.1</version>
  <description>My custom policy for AIC</description>
  <maintainer email="your@email.com">YourName</maintainer>
  <license>Apache-2.0</license>

  <depend>aic_control_interfaces</depend>
  <depend>aic_model</depend>
  <depend>aic_model_interfaces</depend>
  <depend>aic_task_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>