<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ais_retry_classifier</name>
  <version>0.0.1</version>
  <description>SFP retry/success classifier dataset collection and baseline training tools.</description>
  <maintainer email="jungseonglian@sju.ac.kr">JungSeong</maintainer>
  <license>TODO: License declaration</license>

  <depend>aic_model_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
