[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ais-retry-classifier"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = ["numpy", "pyyaml"]

[project.scripts]
retry_capture_features = "ais_retry_classifier.collection.feature_capture_node:main"
retry_make_scenarios = "ais_retry_classifier.policies.scenario_plan:main"
retry_train_baseline = "ais_retry_classifier.training.train_baseline:main"
