<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>final_policy</name>
  <version>0.0.1</version>
  <description>Final AIS policy using unified pose prediction.</description>
  <maintainer email="jungseonglian@sju.ac.kr">JungSeong</maintainer>
  <license>TODO: License declaration</license>

  <depend>aic_control_interfaces</depend>
  <depend>aic_model</depend>
  <depend>aic_task_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
