[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "final-policy"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = ["numpy", "torch", "torchvision", "huggingface-hub"]

[tool.setuptools]
packages = ["final_policy", "final_policy.pose_prediction"]
